# rust-vobject

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: component.rs  error.rs  icalendar.rs  lib.rs  param.rs  parser.rs  property.rs  util.rs  vcard.rs
src/vobject/: icalendar.rs  lib.rs  vcard.rs
tests/: lib.rs
