[package]
name = "vobject"
version = "0.4.1"
description = "Simple VObject parsing library."

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"

homepage = "http://rust-vobject.unterwaditzer.net/"
documentation = "http://rust-vobject.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-vobject"
readme = "README.md"
keywords = ["vobject", "icalendar", "calendar", "contacts"]

[dependencies]
error-chain = "0.11"
chrono      = { version = "0.4", optional = true }

[features]
default         = []
timeconversions = ["chrono"]

