[package]
name = "vobject"
version = "0.7.0"
description = "Simple VObject parsing library."

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"

homepage = "http://rust-vobject.unterwaditzer.net/"
documentation = "http://rust-vobject.unterwaditzer.net/"
repository = "https://github.com/untitaker/rust-vobject"
readme = "README.md"
keywords = ["vobject", "icalendar", "calendar", "contacts"]

[dependencies]
chrono      = { version = "0.4", optional = true }
failure = "0.1"

[features]
default         = []
timeconversions = ["chrono"]

